# DFR

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  WORKLOG.md  conftest.py  docker-compose.yml  index.html  main.py  pyproject.toml  ranking.py  requirements.txt  start.sh  ui.html  web_search.py
.github/workflows/: ci.yml
app/: __init__.py  main.py  web_search.py
app/static/: app.js  styles.css
app/templates/: index.html
data/: bangs.json
dfr/: __init__.py  app.py  auth.py  conf.py  deps.py  exceptions.py  filters.py  middleware.py  openapi.py  pagination.py  permissions.py  routing.py  serializers.py  sync.py  testing.py  throttling.py  types.py
dfr/admin/: __init__.py  compat.py
dfr/async_/: __init__.py  boundaries.py
dfr/filtering/: __init__.py  django_filters.py  drf_compat.py
dfr/middleware/: __init__.py  django_adapter.py  merged.py  stack.py
dfr/openapi/: __init__.py  django_adapter.py  schema.py
docs/: ARCHITECTURE.md  QUALITY.md
frontend/: index.html  package.json  tailwind.config.js
go/: main.go
tests/: test_deps_auth_convergence.py  test_deps_middleware_permissions.py  test_deps_session_auth.py  test_drf_compat_adapters.py  test_imports.py  test_integration_django_urlresolver.py  test_integration_end_to_end_app.py  test_middleware_merged_pipeline.py  test_pagination_filtering_db_admin.py  test_routing.py  test_routing_converters_and_django_urls.py  test_routing_dispatcher.py  test_routing_fastapi_adapter.py  test_scaffolding.py  test_serializers_testing_openapi.py  test_sync.py  test_throttle_memory.py
(+29 files in other folders)
