[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfr"
version = "0.1.0"
description = "Django + DRF + FastAPI hybrid framework scaffold"
requires-python = ">=3.11"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
plugins = []

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
